backend/tests/corpus/shadowing-pos-012.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  labels:
    cape-test-case: shadowing-pos-012
    owner-team: team-alpha
  name: img-policy-shadowing-pos-012
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaces:
    - shadow-ns-shadowing-pos-012-0
  parameters:
    repos:
    - mycompany.com/
